--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email: hehemin@pku.edu.cn
 
 ## Discriptions
 about: I am curently a Ph.D. student of Peking University HSBC Business School, majoring in economics. My research interest is quantitative economics and finance. Here is my <a href="https://hehemin.github.io/res/cv/CV6.pdf">CV (2017)</a>.
-image: https://twitter.com/hemin_he/photo
+image: https://hehemin.github.io/res/HHM.jpg
 
 ## Others
 paginate: 15
